Node.h:392:12: warning: 'this' pointer cannot be null in well-defined C++ code https://bugs.webkit.org/show_bug.cgi?id=150996

Reviewed by Andreas Kling.

Remove ASSERT(this) statement that is triggering hundreds of warnings from Clang.

* dom/Node.h:
(WebCore::Node::document):

Canonical link: https://commits.webkit.org/169207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192130 268f45cc-cd09-0410-ab3c-d52691b4dbfc