Source/WebCore/dom/Node.h
@@ -389,7 +389,6 @@ public:
     // A Document node returns itself.
     Document& document() const
     {
-        ASSERT(this);
         return treeScope().documentScope();
     }
 
